Use docker-compose scale